--- a/AMSS/src/AMSS/MainMenu.form
+++ b/AMSS/src/AMSS/MainMenu.form
@@ -3,7 +3,7 @@
 <Form version="1.3" maxVersion="1.5" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="title" type="java.lang.String" value="Find"/>
+    <Property name="title" type="java.lang.String" value="Casa de Retiro"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -85,7 +85,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="jButton2">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Alta de Paciente"/>
+        <Property name="text" type="java.lang.String" value="Alta de Residente"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="jButton3">
