--- a/AMSS/src/AMSS/MainMenu.form
+++ b/AMSS/src/AMSS/MainMenu.form
@@ -93,6 +93,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Desplegar info"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButton4">
       <Properties>
@@ -106,6 +109,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Agregar medicamento"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton5ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButton6">
       <Properties>
