--- a/AMSS/src/AMSS/Views/ReporteGUI.form
+++ b/AMSS/src/AMSS/Views/ReporteGUI.form
@@ -89,11 +89,11 @@
             <Component class="javax.swing.JTable" name="jTable1">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="4" rowCount="15">
+                  <Table columnCount="4" rowCount="0">
                     <Column editable="true" title="Nombre" type="java.lang.Object"/>
-                    <Column editable="true" title="Medicinas" type="java.lang.Object"/>
+                    <Column editable="true" title="Medicina" type="java.lang.Object"/>
                     <Column editable="true" title="Dosis" type="java.lang.Object"/>
-                    <Column editable="true" title="Title 4" type="java.lang.Object"/>
+                    <Column editable="true" title="Turno" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
